--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,20 @@ body,html{
   
 }
 
+
+/* @keyframes slide {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-slide {
+  animation: slide 10s linear infinite;
+} */
+
 .btn-shine {
     position: absolute;
     top: 50%;
