--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 body,html{
-  
     font-family: "Italiana", sans-serif;
     font-weight: 400;
     font-style: normal;
-  
+}
+body{
+  overflow-y: hidden;
 }
 
 
