--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body,html{
     font-family: "Italiana", sans-serif;
     font-weight: 400;
     font-style: normal;
+    overflow: hidden;
 }
 
 /* @keyframes slide {
